--- a/src/styles.css
+++ b/src/styles.css
@@ -17,6 +17,22 @@
     gap: 1rem;
 }
 
+.UserLoggedIcon{
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    align-items: center;
+    width: 170px;
+    height: 50px;
+    position: absolute;
+    right: 0;
+    z-index: 1;
+    margin-top: 1rem;
+    margin-right:2rem;
+    background-color: #e8ecef;
+    border-radius: 1.5rem;
+}
+
 .title {
   word-wrap: break-word;
   color: #50596c;
