--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap');
-html{
-  min-height: 100vh;
-}
-body {
+*, *::after, *::before{
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
+}
+body,html, .root{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: 'Poppins','Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #001e1d;
-  min-height: 100vh;
+  min-height: 100%;
+  overflow-x: hidden;
 }
 
 code {
